--- a/roles/database/tasks/mariadb.yml
+++ b/roles/database/tasks/mariadb.yml
@@ -1,5 +1,5 @@
 ---
-  - name: "Install MySQL packages"
+  - name: "Install MySQL Packages"
     yum:
       name: "{{ item }}"
       state: latest
