--- a/roles/Zabbix/tasks/zproxy.yml
+++ b/roles/Zabbix/tasks/zproxy.yml
@@ -1,5 +1,5 @@
 ---
-#ZABIX INSTALLATION
+  #ZABIX PROXY INSTALLATION
   - name: Install Zabbix proxy repo
     yum:
       name: https://repo.zabbix.com/zabbix/6.4/rhel/8/x86_64/zabbix-release-6.4-1.el8.noarch.rpm
